# code-context-graph

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml
.github/workflows/: ci.yml
crates/aase/: Cargo.toml
crates/aase/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: http_endpoints.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: analyze_command.rs  analyze_graph.rs  viz_cmd.rs  viz_cmd_html_and_filters.rs  viz_cmd_project.rs
crates/connascence/: Cargo.toml
crates/connascence/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  hash.rs  lib.rs  snapshot.rs  types.rs
crates/core/tests/: config_tests.rs  logging_tests.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/graph/tests/: builder_tests.rs  client_tests.rs  falkor_testcontainers.rs  integration_falkor.rs
crates/parser/: Cargo.toml
crates/parser/docs/: README.md  ast-abstraction.md  tree-sitter-integration.md
crates/parser/src/: lib.rs  test_utils.rs
crates/parser/src/ast/: mod.rs  node.rs  simplified.rs
crates/parser/src/incremental/: mod.rs
crates/parser/src/language/: detector.rs  mod.rs  registry.rs
crates/parser/src/parsers/: java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs
crates/parser/src/visitor/: base.rs  entity_extractor.rs  metadata_collector.rs  mod.rs  relation_extractor.rs
crates/parser/tests/: integration.rs
crates/parser/tests/benchmarks/: parsing_performance.rs
crates/parser/tests/fixtures/java/: complex_inheritance.java
crates/parser/tests/fixtures/javascript/: modern_es6.js
crates/parser/tests/fixtures/kotlin/: coroutines_example.kt
crates/parser/tests/fixtures/python/: decorators_example.py
crates/parser/tests/integration/: end_to_end.rs.bak  parser_unit_tests.rs  property_tests.proptest-regressions  property_tests.rs.bak
crates/parser/tests/regression/: golden_tests.rs
crates/parser/tests/regression/golden/: java_complex_inheritance.json  java_simple_class.json  javascript_modern_es6.json  javascript_simple_class.json  kotlin_coroutines.json  kotlin_simple_class.json  python_decorators.json  python_simple_class.json
crates/storage/: Cargo.toml
crates/storage/src/: cas.rs  lib.rs  merkle.rs
crates/storage/tests/: cas_tests.rs  merkle_tests.rs
crates/viz/: Cargo.toml
crates/viz/src/: mermaid.rs
crates/viz/tests/: mermaid_class_exporter.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
docker/: docker-compose.yml
docs/: aase.md  api.md  architecture.md  configuration.md  connascence.md  development.md  parser.md  storage.md  troubleshooting.md  viz.md
docs/examples/: llm-context-request.json
docs/prd/: CodeContextGraph.md  PRD.md  issues.md  milestones.md
examples/java/: Example.java
examples/python/: example.py
