[package]
name = "code-context-graph-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
code-context-graph-core = { path = "../core" }
code-context-graph-parser = { path = "../parser" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
